Fix container query link spacing and color
This CL adds a space between the container name and the container
details by changing the display property of the container name to
`display: inline-block`, avoiding creating extra trailing spaces after
the container name, which adds extra underlines.

This CL also fixes the color of the container axis icon.

Bug: chromium:1146422
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/3087344
Commit-Queue: Changhao Han <changhaohan@chromium.org>
Auto-Submit: Changhao Han <changhaohan@chromium.org>

--- a/front_end/panels/elements/components/queryContainer.css
+++ b/front_end/panels/elements/components/queryContainer.css
@@ -5,6 +5,7 @@
  */
 
 .container-link {
+  display: inline-block;
   color: var(--color-text-disabled);
 }
 
